test/scc_test/stmt/semantic-errors/024.t
void test()
{
    label:
        int a;
}